--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>My Boo Rachel</title>
-  <link rel="stylesheet" type="text/css" href="assets/styles/two.css"/>
+  <link rel="stylesheet" type="text/css" href="css/two.css"/>
   
 
 <body>
