--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>My Boo Rachel</title>
-  <link rel="stylesheet" type="text/css" href="assets/styles/style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
   <script src="less.js" type="text/javascript"></script>
 
 <body>
