--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
   <div class="center">
     <h1 class = "header">
-      You are an amazing girlfriend, thank you for me so awesome love bug.
+      <b>You are an amazing girlfriend, thank you for being so awesome love bug.</b>
       </h1>
    </div>
 
